--- a/index.html
+++ b/index.html
@@ -82,6 +82,10 @@
             </div>
         </div>
     </nav>
+
+    <section class="home">
+        <div class="text">Dashboard</div>
+    </section>
     
     <script src="js/main.js"></script>
 </body>
